Bug ZK-2359: Autopaging causes flickering of list

--- a/src/main/resources/web/atlantic/js/zul/sel/less/listbox.less
+++ b/src/main/resources/web/atlantic/js/zul/sel/less/listbox.less
@@ -356,6 +356,10 @@
 		}
 	}
 }
+.z-listbox-autopaging .z-listcell-content {
+	height: 30px;
+	overflow: hidden;
+}
 //column menu
 .z-listhead-menugrouping .z-menuitem-image {
 	.encodeThemeURL(background-image, '~./zul/img/grid/menu-group.png');
