--- a/src/main/resources/web/atlantic/js/zul/sel/less/tree.less
+++ b/src/main/resources/web/atlantic/js/zul/sel/less/tree.less
@@ -237,7 +237,13 @@
 		}
 	}
 }
-
+.z-tree-autopaging .z-treecell-content,
+.z-dottree-autopaging .z-treecell-content,
+.z-filetree-autopaging .z-treecell-content,
+.z-vfiletree-autopaging .z-treecell-content {
+	height: 30px;
+	overflow: hidden;
+}
 // ZK-2151: use strict selector to prevent nest problem
 //IE8 use image for radio icon
 .ie8 {
